static/stylesheets/scss/theme.scss
// Btns
.btn-default:hover{
  border-color: mix( $brand-primary, white, 75% );
  background: mix( $brand-primary, white, 75% );
}

// Icons
.btn[class*="icon-"]:before{
  // align-right
  float: right;
  margin-right: 0;
  margin-left: 10px;
}

// Page Title
.page-title{
  font-size: 2em;
  color: $text-color;
  font-weight: $font-weight-700;
}

// Language Selector
#menu-lang{
  margin-top: 0;
  margin-right: 0;

  .dropdown .btn{
    background: none;
    text-transform: uppercase;
    padding: 10px 0;
    line-height: 20px;
    border: none;
    color: $gray-light;

    &:hover{
      color: $text-color;
    }
    &:focus {
      outline: none;
      @include box-shadow(none);
    }

    .caret{
      margin-left: 5px;
    }
  }

  ul.dropdown-menu{
    display: none;
    height: auto;
    padding: 0;
    margin: 0;
    margin-top: 2px;
    border: none;

    li{
      float: none;
      border: none;
      padding: 12px 25px;
      border-bottom: 1px solid $gray-lighter;
      text-transform: uppercase;
      text-align: center;

      &:last-child{
        border: none;
      }

      input{
        text-transform: uppercase;
      }
    }
  }

  .open ul.dropdown-menu{
    display: block;
  }
}

@media (min-width: $grid-float-breakpoint) {

   #menu-lang{
    &:before{
      content: '';
      display: block;
      position: absolute;
      top: 16px;
      left: -11px;
      height: 20px;
      width: 1px;
      background: $gray-lighter;
    }
    .dropdown .btn{
      padding: 0;
      line-height: 52px;
    }
    ul.dropdown-menu{
      margin-left: -25px;
      li{
        text-align: left;
      }
    }
  }
}


// Header
header{
  clear: both;
  background: $gray-base;
}

.main-entity-logo{
  margin-top: $grid-gutter-width/2;
  margin-bottom: $grid-gutter-width/2;
}

@media (min-width: $screen-sm-min) {

  .main-entity-logo{
    float: right;
  }
}

.navbar-brand{
  font-size: 1.071em;
  font-weight: $font-weight-400;
  letter-spacing: 0.05em;
  line-height: 25px;

  a{
    color: white;
  }
}

.navbar-default .navbar-toggle{
  color: $text-color;
  font-weight: $font-weight-700;

  &:hover,
  &:focus{
    color: $brand-primary;
    background: white;
    font-weight: $font-weight-700;
  }
}

@media (min-width: $screen-sm-min) {
  .navbar-brand{
    position: static;
    margin: $grid-gutter-width/2 0;
    text-align: left;
  }
}

.navbar-default{
  text-align: center;

  .navbar-nav{
    padding: $grid-gutter-width/3 0;
    display: inline-block;

    [class*="icon-"]:before{
      display: none;
    }

    > li{

      > a{
        color: $text-color;
        font-size: 1.25em;
        font-weight: $font-weight-700;
        text-transform: none;

        &:hover,
        &:focus{
          color: $brand-primary;
        }
      }

      &.active{

        > a,
        > a:hover,
        > a:focus{
          color: $brand-primary;
          font-weight: $font-weight-700;
        }
      }
    }
  }
}

@media (min-width: $grid-float-breakpoint) {

  .navbar-default{
    height: 54px !important;

    .navbar-nav{
      padding: 0;
      width: auto;

      > li{
        width: auto;
        margin: 0 7px;
        border-bottom: 2px solid white;

        &:first-child {
          margin-left: 0;
        }

        > a{
          line-height: 50px;
          padding: 2px 0 0;
          text-align: left;
        }

        &.active{
          border-bottom-color: $brand-primary;
        }
      }
    }
  }
}

@media (min-width: $screen-lg-min) {
  .navbar-default .navbar-nav > li{
    margin: 0 11px;
  }
  #menu-lang:before{
    left: -11px;
  }
}

// Nav Tabs
.nav-tabs > li{
  a,
  a:hover{
    color: $text-color;
    font-weight: $font-weight-700;
  }
  &.active > a,
  &.active > a:hover{
    color: $brand-primary;
  }
}

// Social Sharing
.social-sharing-toolbox li a{
  background-color: $brand-primary;
}

// Data Sources
.data-sources {
  background: $brand-terciary;
  .alert{
   background: mix( $brand-terciary, white, 50% );
  }
}

// Data Downloads
.panel-downloads{
  border-color: $brand-secondary;
  background: $brand-secondary;

  a{
    color: $brand-primary;

    &:hover{
      color: $text-color;
    }
  }
}
/* ... */

